Add OrganisationController.go, OrganisationModel.go and logic implemented
