# router/router.go
@@ -8,6 +8,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// SetupRouter is a function to set up all routes
 var SetupRouter = func(router *gin.Engine) {
 	v1api := router.Group("/v1/api")
 	{
@@ -36,7 +37,13 @@ var SetupRouter = func(router *gin.Engine) {
 			protectedGroup.POST("/organisation", controllers.CreateOrganisation())
 			protectedGroup.GET("/organisation/:organisationId", controllers.GetOrganisation())
 			protectedGroup.PUT("/organisation/:organisationId", controllers.UpdateOrganisation())
+			protectedGroup.DELETE("/organisation/:organisationId", controllers.DeleteOrganisation())
 
+			//Item Routes
+			protectedGroup.POST("/item/:organisationId", controllers.CreateItem())
+			protectedGroup.GET("/item/:itemId", controllers.GetItem())
+			protectedGroup.GET("/items/:organisationId", controllers.GetItems())
+			protectedGroup.PUT("/item/:itemId", controllers.UpdateItem())
 		}
 
 	}
